RESOLVED FIXED112268
[TexMap] Painting into area of composited tile not cleared
https://bugs.webkit.org/show_bug.cgi?id=112268
Summary [TexMap] Painting into area of composited tile not cleared
Allan Sandfeld Jensen
Reported 2013-03-13 09:42:34 PDT
In the test ManualTests/scrollbars/scrollbars-in-composited-layers.html, the box-shadow will become darker and darker when the scrollbar is used. This is due to a mismatch of what area of the tile is cleared and what is painting, since paintGraphicsLayerContents does not enforce clipping.
Attachments
Patch (1.75 KB, patch)
2013-03-13 09:46 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-03-13 09:46:29 PDT
Allan Sandfeld Jensen
Comment 2 2013-03-14 04:28:51 PDT
Comment on attachment 192938 [details] Patch Clearing flags on attachment: 192938 Committed r145803: <http://trac.webkit.org/changeset/145803>
Allan Sandfeld Jensen
Comment 3 2013-03-14 04:28:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.