[TexMap] Painting into area of composited tile not cleared https://bugs.webkit.org/show_bug.cgi?id=112268

Reviewed by Kenneth Rohde Christiansen.

Clip painting to the area that has been cleared, so we
do not accidentally overpaint other areas.

Can be observed in ManualTests/scrollbars/scrollbars-in-composited-layers.html.

* platform/graphics/texmap/TextureMapperImageBuffer.cpp:
(WebCore::BitmapTextureImageBuffer::updateContents):

git-svn-id: svn://svn.chromium.org/blink/trunk@145803 bbb929c8-8fbe-4397-9dbb-9b2b20218538